map validation exceptions to http error